syntax = "proto3";

option csharp_namespace = "Super";


service SuperService {
  
  rpc DoWork(RequestData) returns (ResponseData) {}

  rpc StreamWork(stream RequestData) returns (ResponseData) {}

  rpc StreamResult(RequestData) returns (stream ResponseData) {}

  rpc DuplexStreaming(stream RequestData) returns (stream ResponseData) {}
}

message RequestData {
  string message = 1;
}

message ResponseData {
  string message = 1;
}